Add CNAME file to associate with docs.nunit.org (#424)
* Create CNAME

* move cname to docs

* add CNAME to docs build 423f99dff136fa33d191de8ba3a1f865b75f7306

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,17 @@
       "is_incremental": false
     },
     {
+      "type": "Resource",
+      "source_relative_path": "CNAME",
+      "output": {
+        "resource": {
+          "relative_path": "CNAME"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/developer-info/Best-practices-for-XML-documentation.md",
       "output": {
