--- a/manifest.json
+++ b/manifest.json
@@ -33267,7 +33267,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/toc.html",
-          "hash": "FXBSb1Ca9AqQFyd2+wjdug=="
+          "hash": "wNnadDw5lcI2otQSXUt7Fg=="
         }
       },
       "is_incremental": false,
@@ -33340,6 +33340,18 @@
         ".html": {
           "relative_path": "articles/vs-test-adapter/Debugging.html",
           "hash": "RM9SgEAJrlV/0WIWDMDtWw=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/vs-test-adapter/Index.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/vs-test-adapter/Index.html",
+          "hash": "easYNQoy4kje8HvFRMMLbg=="
         }
       },
       "is_incremental": false,
@@ -34075,22 +34087,22 @@
         "full_build_reason_code": "NoAvailableBuildCache"
       },
       "processors": {
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build",
+          "total_file_count": 0,
+          "skipped_file_count": 0
+        },
         "ConceptualDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 298,
+          "total_file_count": 299,
           "skipped_file_count": 0
         },
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build",
-          "total_file_count": 0,
-          "skipped_file_count": 0
-        },
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot support incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build",
           "total_file_count": 0,
           "skipped_file_count": 0
