--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -10,6 +10,9 @@ references:
 - uid: apartment-attribute
   name: Apartment
   href: articles/nunit/writing-tests/attributes/apartment.html
+- uid: assemblyisolation
+  name: Assembly Isolation
+  href: articles/nunit/technical-notes/usage/Assembly-Isolation.html
 - uid: author-attribute
   name: Author
   href: articles/nunit/writing-tests/attributes/author.html
@@ -25,6 +28,9 @@ references:
 - uid: combinatorialattribute
   name: Combinatorial
   href: articles/nunit/writing-tests/attributes/combinatorial.html
+- uid: configurationfiles
+  name: Configuration Files
+  href: articles/nunit/technical-notes/usage/Configuration-Files.html
 - uid: ConsoleCommandLine
   name: Console Command Line
   href: articles/nunit/running-tests/Console-Command-Line.html
@@ -118,6 +124,9 @@ references:
 - uid: ResultWriters
   name: Result Writers
   href: articles/nunit/extending-nunit/Result-Writers.html
+- uid: runtimeselection
+  name: Runtime Selection
+  href: articles/nunit/technical-notes/usage/Runtime-Selection.html
 - uid: SameAsConstraint
   name: SameAs Constraint
   href: articles/nunit/writing-tests/constraints/SameAsConstraint.html
@@ -184,6 +193,9 @@ references:
 - uid: valuesource
   name: ValueSource
   href: articles/nunit/writing-tests/attributes/valuesource.html
+- uid: visualstudiosupport
+  name: Visual Studio Support
+  href: articles/nunit/technical-notes/usage/Visual-Studio-Support.html
 - uid: vstestadapterinstallation
   name: Adapter Installation
   href: articles/vs-test-adapter/Adapter-Installation.html
