--- a/manifest.json
+++ b/manifest.json
@@ -31215,7 +31215,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/nunit/release-notes/console-and-engine.html",
-          "hash": "447eAeVwr2JkJT19H2Sb0w=="
+          "hash": "3AUfI+jpuHsbPSN1yBY4Ng=="
         }
       },
       "is_incremental": false,
@@ -31419,7 +31419,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/nunit/technical-notes/nunit-internals/NUnit-APIs.html",
-          "hash": "55+mPFN7qS2ic/6EY3Jp0w=="
+          "hash": "WxLUx2x7l61piLGCiHDJZQ=="
         }
       },
       "is_incremental": false,
@@ -31455,7 +31455,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/nunit/technical-notes/nunit-internals/Test-Discovery-And-Execution.html",
-          "hash": "X6qGX359dgn7HPYYEawpmw=="
+          "hash": "ylsmlguz66nH/1CIkCvqAw=="
         }
       },
       "is_incremental": false,
@@ -33831,7 +33831,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/vs-test-generator/Visual-Studio-Test-Generator.html",
-          "hash": "MeNW16vZ+O1QpKJHubysvg=="
+          "hash": "sOWn2rndGNygms1DYG1nCQ=="
         }
       },
       "is_incremental": false,
@@ -34029,6 +34029,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "images/nunit-topology.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/nunit-topology.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "images/nunit-xtp-2008.png",
       "output": {
         "resource": {
@@ -34055,6 +34066,28 @@
       "output": {
         "resource": {
           "relative_path": "images/nunitlite-mock.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/right-click-create-tests-select-nunit.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/right-click-create-tests-select-nunit.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/right-click-create-tests.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/right-click-create-tests.png"
         }
       },
       "is_incremental": false,
