Uses nameof() to reduce ~magic strings~ (#519) 8dfe16285a86102e191c09ae18f85826e01b25f4

--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -80,7 +80,7 @@ references:
   name: NUnit Agent
   href: articles/nunit/technical-notes/nunit-internals/NUnit-Agent.html
 - uid: nunitanalyzers
-  name: Analyzers
+  name: Overview of implemented NUnit diagnostics and code fixes
   href: articles/nunit-analyzers/NUnit-Analyzers.html
 - uid: nunitprojectxmlformat
   name: NUnit Project XML Format
