Add missing types of test-suite nodes. (#520)
* Add missing types of test-suite nodes.

* Update docs/articles/nunit/technical-notes/usage/Test-Result-XML-Format.md

Co-authored-by: Sean Killeen <SeanKilleen@gmail.com> 645cb29331a7cdedcac997133ff0df30c4e5ea11

--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -43,24 +43,30 @@ references:
 - uid: customconstraints
   name: Custom Constraints
   href: articles/nunit/extending-nunit/Custom-Constraints.html
-- uid: engineextensibility
-  name: Engine Extensibility
-  href: articles/nunit/extending-nunit/Engine-Extensibility.html
+- uid: engineextensionsindex
+  name: Engine Extensions
+  href: articles/nunit-engine/extensions/Index.html
 - uid: EqualConstraint
   name: Equal Constraint
   href: articles/nunit/writing-tests/constraints/EqualConstraint.html
 - uid: EventListeners
   name: Event Listeners
-  href: articles/nunit/extending-nunit/Event-Listeners.html
+  href: articles/nunit-engine/extensions/Event-Listeners.html
 - uid: FrameworkDrivers
   name: Framework Drivers
-  href: articles/nunit/extending-nunit/Framework-Drivers.html
+  href: articles/nunit-engine/extensions/Framework-Drivers.html
 - uid: frameworkreleasenotes
   name: Framework Release
   href: articles/nunit/release-notes/framework.html
+- uid: gettingstartedengine
+  name: Getting Started with the NUnit Engine
+  href: articles/nunit-engine/Getting-Started.html
 - uid: IncludeExcludeAttributesAlternatives
   name: Include And Exclude Attributes Alternatives
   href: articles/nunit/technical-notes/nunit-internals/specs/Include%20and%20Exclude%20Attributes%20(Alternatives).html
+- uid: installingextensions
+  name: Installing Engine Extensions
+  href: articles/nunit-engine/extensions/Installing-Extensions.html
 - uid: internaltracespec
   name: Internal Trace Spec
   href: articles/nunit/technical-notes/nunit-internals/specs/Internal-Trace-Spec.html
@@ -76,12 +82,12 @@ references:
 - uid: NUnit3Architecture2009
   name: NUnit 3.0 Architecture (2009)
   href: articles/nunit/technical-notes/nunit-internals/NUnit-3.0-Architecture-(2009).html
-- uid: nunitagent
-  name: NUnit Agent
-  href: articles/nunit/technical-notes/nunit-internals/NUnit-Agent.html
 - uid: nunitanalyzers
   name: Overview of implemented NUnit diagnostics and code fixes
   href: articles/nunit-analyzers/NUnit-Analyzers.html
+- uid: nunitengine
+  name: NUnit Engine
+  href: articles/nunit-engine/Index.html
 - uid: nunitprojectxmlformat
   name: NUnit Project XML Format
   href: articles/nunit/technical-notes/usage/NUnit-Project-XML-Format.html
@@ -108,7 +114,7 @@ references:
   href: articles/nunit/release-notes/Pre-3.5-Release-Notes.html
 - uid: ProjectLoaders
   name: Project Loaders
-  href: articles/nunit/extending-nunit/Project-Loaders.html
+  href: articles/nunit-engine/extensions/Project-Loaders.html
 - uid: PropertyAttribute
   name: Property
   href: articles/nunit/writing-tests/attributes/property.html
@@ -123,7 +129,10 @@ references:
   href: articles/nunit/writing-tests/attributes/range.html
 - uid: ResultWriters
   name: Result Writers
-  href: articles/nunit/extending-nunit/Result-Writers.html
+  href: articles/nunit-engine/extensions/Result-Writers.html
+- uid: runningtests
+  name: Running Tests
+  href: articles/nunit/running-tests/Index.html
 - uid: runtimeselection
   name: Runtime Selection
   href: articles/nunit/technical-notes/usage/Runtime-Selection.html
@@ -166,6 +175,12 @@ references:
 - uid: TestContext
   name: TestContext
   href: articles/nunit/writing-tests/TestContext.html
+- uid: testengineapi
+  name: Test Engine API
+  href: articles/nunit-engine/Test-Engine-API.html
+- uid: testFilters
+  name: Test Filters
+  href: articles/nunit/technical-notes/usage/Test-Filters.html
 - uid: testfixtureattribute
   name: TestFixture
   href: articles/nunit/writing-tests/attributes/testfixture.html
@@ -202,9 +217,9 @@ references:
 - uid: vstestgenerator
   name: Visual Studio Test Generator
   href: articles/vs-test-generator/Visual-Studio-Test-Generator.html
-- uid: WritingEngineExtensions
+- uid: writingengineextensions
   name: Writing Engine Extensions
-  href: articles/nunit/extending-nunit/Writing-Engine-Extensions.html
+  href: articles/nunit-engine/extensions/Writing-Engine-Extensions.html
 - uid: xamarinrunners
   name: NUnit Xamarin Runners
   href: articles/xamarin-runners/index.html
